kubernetes/apps/home-automation/actual-finance/app/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  labels:
    app: actual
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actual
  template:
    metadata:
      labels:
        app: actual
    spec:
      containers:
        - name: actual
          image: ghcr.io/actualbudget/actual-server:23.8.1
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          resources:
            requests:
              cpu: 80m
              memory: 256Mi
            limits:
              cpu: 220m
              memory: 512Mi
          volumeMounts:
            - name: data-storage
              mountPath: /data
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: actual-storage
