kubernetes/apps/home-automation/actual-finance/app/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actual
  labels:
    app: actual
spec:
  selector:
    app: actual
  ports:
    - name: http
      port: 80
      targetPort: 5006
      protocol: TCP
  type: ClusterIP
