kubernetes/apps/home-automation/actual-finance/app/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-route
  namespace: home-automation

spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-system

  # Fully qualified domain name for the service
  hostnames:
    - "actual.altena.io"

  # Routing rules
  rules:
    - backendRefs:
        - name: actual
          port: 80
