kubernetes/apps/home-automation/actual-finance/app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-finance
spec:
  ingressClassName: internal
  rules:
  - host: finance.altena.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual
            port:
              name: web
  tls:
  - hosts:
    - finance.altena.io
    secretName: altena-io-tls
